# ai-testing

./: README.md  pyproject.toml
src/ai_model/: ollama_model.py  openapi_key.py  qwen_embedding.py  qwen_model.py
src/ai_model/chroma_langchain_db/: chroma.sqlite3
src/api/: case.py  generate_case.py
src/api/data/: ip.har  用例文档.md
src/app/: app_framework.py  appium_tools.py  generate_autoapp.py
src/test_langchain/: langchain_retrieval.py
src/testcase_gen_agent/: llm_tools.py  test_graph.py  testcase.xlsx  testcase_gen.py  testcase_generate.py  需求文档.md
src/utils/: langchain_debug.py
src/web/: generate_autoweb.py  selenium_tools.py  web_framework.py
